--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             <div class="grid">
                 <!-- Imagen 1 -->
                 <div class="grid-item">
-                    <img src="img/arcor1.png" alt="Arcor" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <img src="img/arcor1.png" alt="Arcor" class="img-fluid" data-bs-toggle="modal"
+                        data-bs-target="#modal1">
                 </div>
                 <!-- Modal 1 -->
                 <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modalLabel1" aria-hidden="true">
@@ -80,81 +81,77 @@
                             </div>
                             <div class="modal-body">
                                 <img src="img/arcor1.png" class="img-fluid" alt="Arcor">
-                                <p>Arcor es una de las empresas de alimentos más importantes de Argentina y de América
-                                    Latina. Fundada en 1951, se especializa en la producción de golosinas, chocolates,
-                                    galletas y productos alimenticios en general. Con presencia en más de 120 países,
-                                    Arcor es reconocida por su compromiso con la calidad y la innovación. Además, ha
-                                    expandido su portafolio con marcas icónicas que abarcan diversas categorías de
-                                    productos, destacándose como un referente en la industria alimentaria a nivel
-                                    mundial.</p>
+                                <p>Arcor es una de las empresas de alimentos más importantes...</p>
                                 <a href="https://www.instagram.com/arcor?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                                     target="_blank">
                                     <img src="img/png-transparent-instagram-instagram-logo-logo-instagram-icon-thumbnail.png"
-                                        alt="Instagram">
+                                        alt="Instagram" class="img-fluid">
                                 </a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="grid-item"><img src="img/serenisima.png" alt="Serenisima"></div>
-                <div class="grid-item"><img src="img/italiana.png" alt="Italiana"></div>
-                <div class="grid-item"><img src="img/granix.png" alt="Granix"></div>
-                <div class="grid-item"><img src="img/laloma.png" alt="La Loma"></div>
-                <div class="grid-item"><img src="img/lario.png" alt="Lario"></div>
-                <div class="grid-item"><img src="img/logo-coca-cola-1941-1987-1024x576.webp" alt="Coca Cola"></div>
-                <div class="grid-item"><img src="img/schneider.png" alt="Schneider"></div>
-                <div class="grid-item"><img src="img/veneziana.jpg" alt="Veneziana"></div>
-                <div class="grid-item"><img src="img/grupo-bimbo7442.jpg" alt="Bimbo"></div>
-                <div class="grid-item"><img src="img/nuevomunich.png" alt="Nuevo Munich"></div>
-                <div class="grid-item"><img src="img/la varense.jpg" alt="La Varense"></div>
-                <div class="grid-item"><img src="img/paulina.png" alt="La Paulina"></div>
-                <div class="grid-item"><img src="img/quilmes.png" alt="Quilmes"></div>
-                <div class="grid-item"><img src="img/Sancor_coop_logo.svg.png" alt="Sancor"></div>
+
+                <!-- Otras imágenes -->
+                <div class="grid-item"><img src="img/serenisima.png" alt="Serenisima" class="img-fluid"></div>
+                <div class="grid-item"><img src="img/italiana.png" alt="Italiana" class="img-fluid"></div>
+                <div class="grid-item"><img src="img/granix.png" alt="Granix" class="img-fluid"></div>
+                <div class="grid-item"><img src="img/laloma.png" alt="La Loma" class="img-fluid"></div>
+                <div class="grid-item"><img src="img/lario.png" alt="Lario" class="img-fluid"></div>
+                <div class="grid-item"><img src="img/logo-coca-cola-1941-1987-1024x576.webp" alt="Coca Cola"
+                        class="img-fluid"></div>
+                <div class="grid-item"><img src="img/schneider.png" alt="Schneider" class="img-fluid"></div>
+                <div class="grid-item"><img src="img/veneziana.jpg" alt="Veneziana" class="img-fluid"></div>
+                <div class="grid-item"><img src="img/grupo-bimbo7442.jpg" alt="Bimbo" class="img-fluid"></div>
+                <div class="grid-item"><img src="img/nuevomunich.png" alt="Nuevo Munich" class="img-fluid"></div>
+                <div class="grid-item"><img src="img/la varense.jpg" alt="La Varense" class="img-fluid"></div>
+                <div class="grid-item"><img src="img/paulina.png" alt="La Paulina" class="img-fluid"></div>
+                <div class="grid-item"><img src="img/quilmes.png" alt="Quilmes" class="img-fluid"></div>
+                <div class="grid-item"><img src="img/Sancor_coop_logo.svg.png" alt="Sancor" class="img-fluid"></div>
             </div>
         </section>
 
-    </main>
 
 
-    <footer>
-        <section class="grid-container">
-            <div class="container text-center">
-                <div class="row">
-                    <div class="col">
-                        <h4>Horario De Atención</h4>
-                        <h5>Lunes a Sábado</h5>
-                        <p>8:30hs a 13:30hs / 17:00hs a 21:30hs</p>
-                        <h5>Domingo</h5>
-                        <p>10:00hs a 13:30hs</p>
-                    </div>
-                    <div class="col">
-                        <a href="https://www.instagram.com" target="_blank">
-                            <img src="img/png-transparent-instagram-instagram-logo-logo-instagram-icon-thumbnail.png"
-                                alt="Instagram">
-                        </a>
-                        <a href="https://www.facebook.com" target="_blank">
-                            <img src="img/png-clipart-computer-icons-facebook-logo-facebook-logo-fine-thumbnail.png"
-                                alt="Facebook">
-                        </a>
-                        <a href="https://www.linkedin.com" target="_blank">
-                            <img src="img/kisspng-social-media-computer-icons-logo-vector-graphics-p-1713914439762.webp"
-                                alt="LinkedIn">
-                        </a>
-                    </div>
-                    <div class="col">
-                        <h4>Nuestra Ubicación</h4>
-                        <p>San Jerónimo 2191 Local 2 B° San Vicente</p>
-                        <p>Esq. Bernardo de Irigoyen</p>
+        <footer>
+            <section class="grid-container">
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col">
+                            <h4>Horario De Atención</h4>
+                            <h5>Lunes a Sábado</h5>
+                            <p>8:30hs a 13:30hs / 17:00hs a 21:30hs</p>
+                            <h5>Domingo</h5>
+                            <p>10:00hs a 13:30hs</p>
+                        </div>
+                        <div class="col">
+                            <a href="https://www.instagram.com" target="_blank">
+                                <img src="img/png-transparent-instagram-instagram-logo-logo-instagram-icon-thumbnail.png"
+                                    alt="Instagram">
+                            </a>
+                            <a href="https://www.facebook.com" target="_blank">
+                                <img src="img/png-clipart-computer-icons-facebook-logo-facebook-logo-fine-thumbnail.png"
+                                    alt="Facebook">
+                            </a>
+                            <a href="https://www.linkedin.com" target="_blank">
+                                <img src="img/kisspng-social-media-computer-icons-logo-vector-graphics-p-1713914439762.webp"
+                                    alt="LinkedIn">
+                            </a>
+                        </div>
+                        <div class="col">
+                            <h4>Nuestra Ubicación</h4>
+                            <p>San Jerónimo 2191 Local 2 B° San Vicente</p>
+                            <p>Esq. Bernardo de Irigoyen</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-    </footer>
+            </section>
+        </footer>
 
-    <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        <!-- Bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
