--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>La Finca</title>
+    <title>Distribuidora La Finca</title>
 </head>
 
 <body>
@@ -20,7 +20,10 @@
 
             <div class="container-fluid">
 
-                <a class="navbar-brand" href="index.html">La Finca</a>
+                <a class="navbar-brand" href="index.html">
+                    <img src="./img/LOGO/LA FINCA.png" alt="Logo de La Finca" style="height: 40px; width: auto; margin-right: 8px;">
+                    
+                  </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
